feat: criada rota POST e toda a lógica necessária para criação do usuário
